// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduce channel activity should receive JOIN 1`] = `
Object {
  "activity": false,
  "input": Object {
    "dirtyValue": "",
    "history": Object {
      "index": 0,
      "values": Array [],
    },
    "value": "",
  },
  "messages": Array [
    "nick has joined #channel",
  ],
}
`;

exports[`reduce channel activity should switch window 1`] = `
Object {
  "activity": false,
  "input": Object {
    "dirtyValue": "",
    "history": Object {
      "index": 0,
      "values": Array [],
    },
    "value": "",
  },
  "messages": Array [],
}
`;
